@@ -17,6 +17,7 @@ namespace gui
     class color;
     struct quad;
     struct vertex;
+    struct matrix4f;
 
     /// Abstract type for implementation specific management
     class renderer_impl
@@ -42,6 +43,23 @@ namespace gui
 
         /// Ends rendering.
         virtual void end() const = 0;
+
+        /// Sets the view matrix to use when rendering (viewport).
+        /** \param mViewMatrix The view matrix
+        *   \note This function is called by default in begin(), which resets the
+        *         view to span the entire render target (or the entire screen). Therefore
+        *         it is only necessary to use this function when a custom view is required.
+        *         The view matrix converts custom "world" coordinates into screen-space
+        *         coordinates, where the X and Y coordinates represent the horizontal and
+        *         vertical dimensions on the screen, respectively, and range from -1 to +1.
+        *         In screen-space coordinates, the top-left corner of the screen has
+        *         coordinates (-1,-1), and the bottom-left corner of the screen is (+1,+1).
+        *   \warning Although the view is specified here as a matrix for maximum flexibility,
+        *            some backends do not actually support arbitrary view matrices. For such
+        *            backends, the view matrix will be simplified to a simpler 2D translate +
+        *            rotate + scale transform, or even just translate + scale.
+        */
+        virtual void set_view(const matrix4f& mViewMatrix) const = 0;
 
         /// Renders a quad.
         /** \param mQuad The quad to render on the current render target
